--- a/style.css
+++ b/style.css
@@ -506,6 +506,7 @@ select {
     height: 272px;
     background-image: linear-gradient(0deg, rgba(16, 16, 16, 0.84), transparent), url("./images/trainer1.png");
     background-size: cover;
+    background-position: center;
     border-radius: 18px;
     display: flex;
     justify-content: flex-end;
@@ -552,7 +553,11 @@ footer {
 }
 
 .footer-first-section {
-    width: 443px;
+    width: 40%;
+}
+.footer-second-section-container{
+    display: flex;
+    gap: 150px;
 }
 
 .footer-first-section h1 {
@@ -566,7 +571,7 @@ footer {
 .footer-second-section h1 {
     color: rgb(255, 255, 255);
     font-size: 2rem;
-    font-weight: 700;
+    font-weight: 800;
     margin-bottom: 40px;
 }
 
@@ -622,7 +627,7 @@ footer {
 
 }
  .plan-card{
-    width: 330px;
+    width: 100%;
     height: 440px;
     border: 1px solid #7C7C7C;
     background-color: #2B2B2B;
